--- a/aur/django-piston/PKGBUILD
+++ b/aur/django-piston/PKGBUILD
@@ -3,12 +3,13 @@
 
 pkgname=django-piston
 pkgver=0.2.2
-pkgrel=2
+pkgrel=3
 pkgdesc="Piston is django mini-framework creating APIs"
 arch=(any)
 url="http://bitbucket.org/jespern/django-piston"
 license=('GPL')
 depends=('django')
+makedepends=('python2-distribute')
 source=("http://bitbucket.org/jespern/$pkgname/downloads/$pkgname-$pkgver.tar.gz")
 md5sums=('28a2900695fdbcb14ff3c45390e7a4fd')
 
