--- a/aur/monopd/PKGBUILD
+++ b/aur/monopd/PKGBUILD
@@ -13,19 +13,14 @@ source=(gcc4.3.patch \
 md5sums=('4aaadb534ce40348f77c63ce61e73fab' 'e1d9f3be887baf35fbb46886cea8038f')
 
 build() {
-#  cd $srcdir
-#  find . -type f -exec chmod  644 {} \;
-#  find . -type d -exec chmod  755 {} \;
-#  find . -type f -name configure -exec chmod  755 {} \;
+  cd "$srcdir/$pkgname-$pkgver"
 
-  cd $srcdir/$pkgname-$pkgver
-
-  patch -p1 < ../gcc4.3.patch
+  patch -Np1 -i "$srcdir/gcc4.3.patch"
   ./configure --prefix=/usr --sysconfdir=/etc/$pkgname
   make
 }
 
 package() {
-  cd $srcdir/$pkgname-$pkgver
+  cd "$srcdir/$pkgname-$pkgver"
   make DESTDIR=$pkgdir install
 }
