--- a/aur/monopd/PKGBUILD
+++ b/aur/monopd/PKGBUILD
@@ -16,6 +16,11 @@ md5sums=('4aaadb534ce40348f77c63ce61e73fab' 'e1d9f3be887baf35fbb46886cea8038f')
 build() {
   cd "$srcdir/$pkgname-$pkgver"
 
+  # remove -dist extension from config file
+  sed -i 's/monopd.conf-dist/monopd.conf/g' "conf/Makefile.in"
+  sed -i 's/monopd.conf-dist/monopd.conf/g' "conf/Makefile.am"
+  cp conf/monopd.conf-dist conf/monopd.conf
+
   patch -Np1 -i "$srcdir/gcc4.3.patch"
   ./configure --prefix=/usr --sysconfdir=/etc/$pkgname
   make
