--- a/local/conky/PKGBUILD
+++ b/local/conky/PKGBUILD
@@ -1,52 +1,45 @@
-# conky with my custom settings
+# $Id$
+# Contributor: Giovanni Scafora <giovanni@archlinux.org>
+# Contributor: James Rayner <james@archlinux.org>
+# Contributor: Partha Chowdhury <kira.laucas@gmail.com>
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
 
 pkgname=conky
-pkgver=1.8.1
-pkgrel=4
-pkgdesc='An advanced, highly configurable system monitor for X based on torsmo'
-arch=('i686' 'x86_64')
+pkgver=1.9.0
+pkgrel=1
+pkgdesc='Lightweight system monitor for X'
 url='http://conky.sourceforge.net/'
-license=('custom')
-replaces=('torsmo')
-depends=('alsa-lib' 'libxml2' 'curl' 'wireless_tools' 'libxft' 'glib2' 'libxdamage' 'imlib2' 'libxnvctrl')
-makedepends=('pkgconfig')
+license=('BSD' 'GPL')
+arch=('i686' 'x86_64')
+options=('!emptydirs')
+makedepends=('docbook2x')
+depends=('alsa-lib' 'libxml2' 'curl' 'wireless_tools' 'libxft' 'glib2' 'libxdamage' 'imlib2')
 backup=('etc/conky/conky.conf' 'etc/conky/conky_no_x11.conf')
-source=("http://downloads.sourceforge.net/project/${pkgname}/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.gz"
-        "conky-1.8.1-nvidia-x.patch"
-        "current-power.patch")
-sha1sums=('06bbe9b7eed8603fa7a971b27c5c61f38424ac6f'
-          '1e3dc3f2a8e44d62e25ab2ab22726e0e91ecf666'
-          '2eeef0cc5a0b612826b2a7f0b43b7a3b7e10bf0b')
+source=("http://downloads.sourceforge.net/project/${pkgname}/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.gz")
+sha1sums=('a8d26d002370c9b877ae77ad3a3bbd2566b38e5d')
+
+replaces=('torsmo')
 
 build() {
-    cd "${srcdir}/${pkgname}-${pkgver}"
+	cd "${srcdir}/${pkgname}-${pkgver}"
 
-    patch -Np1 -i ${srcdir}/conky-1.8.1-nvidia-x.patch
-    patch -Np1 -i ${srcdir}/current-power.patch
+	CPPFLAGS="${CXXFLAGS}" LIBS="${LDFLAGS}" ./configure \
+		--prefix=/usr \
+		--sysconfdir=/etc \
+		--enable-nvidia \
+		--enable-imlib2 \
+		--disable-lua \
+		--disable-moc \
+		--disable-apcupsd \
+		--enable-wlan \
 
-    sed -i '
-    /#include <curl\/types.h>/ c\
-    //#include <curl/types.h>' src/eve.c
-
-    sed -i '
-    /#include <curl\/types.h>/ c\
-    //#include <curl/types.h>' src/ccurl_thread.c
-
-    ./configure \
-        --prefix=/usr \
-        --sysconfdir=/etc \
-        --enable-wlan \
-        --enable-imlib2 \
-        --enable-nvidia \
-        --disable-lua \
-        --disable-moc \
-        --disable-apcupsd
-
-    make
+	make
 }
 
 package() {
-    cd "${srcdir}/${pkgname}-${pkgver}"
-    make DESTDIR="${pkgdir}" install
-    install -D -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+	cd "${srcdir}/${pkgname}-${pkgver}"
+	make DESTDIR="${pkgdir}" install
+	install -Dm644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+	install -Dm644 extras/vim/syntax/conkyrc.vim "${pkgdir}"/usr/share/vim/vimfiles/syntax/conkyrc.vim
+	install -Dm644 extras/vim/ftdetect/conkyrc.vim "${pkgdir}"/usr/share/vim/vimfiles/ftdetect/conkyrc.vim
 }
