--- a/aur/sphinxcontrib-phpdomain/PKGBUILD
+++ b/aur/sphinxcontrib-phpdomain/PKGBUILD
@@ -16,7 +16,7 @@ md5sums=('14a8256421746b588faa53ba87191ff1')
 package() {
   cd "$srcdir/$pkgname-$_version"
   python2 setup.py install --root="$pkgdir/" --optimize=1
-  install -D -m644 "LICENSE" "$pkgdir/usr/share/licenses/${pkgname}/LICENSE"
+  install -D -m644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
 
 # vim:set ts=2 sw=2 et:
