--- a/aur/t4k_common/PKGBUILD
+++ b/aur/t4k_common/PKGBUILD
@@ -16,7 +16,7 @@ sha1sums=('626eddedee86059ccab593a226c8d98571018b46'
           'aa909083dec77cf7a0e8c25ef422e05b8a84efe1')
 
 build() {
-  cd "$srcdir/${pkgname}-${pkgver}"
+  cd "$srcdir/$pkgname-$pkgver"
 
   patch -Np2 -i "$srcdir/libpng15.patch"
   ./configure --prefix=/usr
@@ -24,7 +24,7 @@ build() {
 }
 
 package() {
-  cd "$srcdir/${pkgname}-${pkgver}"
+  cd "$srcdir/$pkgname-$pkgver"
 
   make DESTDIR=$pkgdir install
 }
