--- a/aur/tennix/PKGBUILD
+++ b/aur/tennix/PKGBUILD
@@ -13,7 +13,7 @@ source=(http://icculus.org/tennix/downloads/${pkgname}-${pkgver}.tar.gz)
 md5sums=('77cbcf2c948a6641824d55367377374b')
 
 build() {
-  cd "${srcdir}/$pkgname-$pkgver"
+  cd "$srcdir/$pkgname-$pkgver"
 
   # use python2
   sed -i "s/python-config/python2-config/g" makefile
@@ -22,7 +22,7 @@ build() {
 }
 
 package() {
-  cd "${srcdir}/$pkgname-$pkgver"
+  cd "$srcdir/$pkgname-$pkgver"
 
-  make PREFIX=/usr DESTDIR=${pkgdir} install
+  make PREFIX=/usr DESTDIR=$pkgdir install
 }
