--- a/django-pagination-git/PKGBUILD
+++ b/django-pagination-git/PKGBUILD
@@ -2,12 +2,12 @@
 
 pkgname=django-pagination-git
 pkgver=20110808
-pkgrel=1
+pkgrel=2
 pkgdesc="A set of utilities for creating robust pagination tools throughout a django application"
 arch=('any')
 url="https://launchpad.net/linaro-django-pagination"
 license=('BSD')
-depends=('django')
+depends=('python2-django')
 makedepends=('git')
 conflicts=('')
 md5sums=()
