update maintainer contact

--- a/bs/PKGBUILD
+++ b/bs/PKGBUILD
@@ -1,4 +1,5 @@
-# Maintainer:  Patrick Palka <patrick@parcs.ath.cx>
+# Maintainer: Tasos Latsas <tlatsas@gmx.com>
+# Contributor: Patrick Palka <patrick@parcs.ath.cx>
 # Contributor: damir <damir@archlinux.org>
 # Development: http://closure.ath.cx/aur-dev
 
